<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.Activity_Class">

    <ImageView
        android:src="@drawable/poly"
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="fitXY"/>

    <TextView
        android:text="@string/id"
        android:textStyle="bold"
        android:textSize="@dimen/sizeFont"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/id"
        android:hint="@string/id"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:textStyle="bold"
        android:textSize="@dimen/sizeFont"
        android:text="@string/name"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/name"
        android:hint="@string/name"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:weightSum="8"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:onClick="add"
            android:text="@string/add"
            android:layout_marginRight="@dimen/marginbt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btadd"/>

        <Button
            android:layout_weight="1"
            android:onClick="cancel"
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btcancel"/>

        <Button
            android:layout_marginLeft="@dimen/marginbt"
            android:layout_weight="1"
            android:onClick="remote"
            android:text="@string/remote"
            android:layout_marginRight="@dimen/marginbt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btremote"/>

        <Button
            android:layout_weight="1"
            android:onClick="edit"
            android:text="@string/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btedit"/>

    </LinearLayout>

    <ListView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/list"/>
</LinearLayout>