<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ok"
    android:orientation="vertical"
    tools:context=".Activity.StudentActivity">

    <ImageView
        android:src="@drawable/student"
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="fitXY"/>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="class"/>
        <Spinner
            android:layout_weight="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"/>
    </LinearLayout>
    <EditText
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/textColor"
        android:textColorHint="@color/fontColor"
        android:id="@+id/txtid"
        android:hint="@string/idStudent"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
<!--One-->
    <EditText
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/textColor"
        android:textColorHint="@color/colorPrimary"
        android:id="@+id/txtName"
        android:hint="@string/nameStudent"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
<!--Two-->
    <EditText
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/textColor"
        android:textColorHint="@color/colorPrimary"
        android:id="@+id/txtClass"
        android:hint="@string/name"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
<!--Three-->
    <EditText
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/textColor"
        android:textColorHint="@color/colorPrimary"
        android:id="@+id/txtPhone"
        android:hint="@string/phone"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
<!--End-->
    <LinearLayout
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:weightSum="3"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:background="@color/fontColor"
            android:onClick="add"
            android:text="@string/add"
            android:layout_marginRight="@dimen/marginbt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btadd"/>

        <Button
            android:background="@color/fontColor"
            android:layout_weight="1"
            android:onClick="cancel"
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btcancel"/>

        <Button
            android:background="@color/fontColor"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:onClick="showList"
            android:text="Show List"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/showList"/>

    </LinearLayout>
</LinearLayout>